changes covering wiki styling, images and minor code fixes

--- a/themes/wiki/assets/css/nyansapow.css
+++ b/themes/wiki/assets/css/nyansapow.css
@@ -1,23 +1,3 @@
-@font-face{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 400;
-    src: url(../fonts/Roboto-Regular.ttf)
-}
-
-@font-face{
-    font-family: Roboto;
-    font-style: normal;
-    src: url(../fonts/Roboto-Light.ttf)
-}
-
-@font-face{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight:bold;
-    src: url(../fonts/Roboto-Bold.ttf)
-}
-
 body{
     margin:0px;
     font-family: Roboto, sans;
