--- a/themes/wiki/assets/css/wiki.css
+++ b/themes/wiki/assets/css/wiki.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Fira+Mono');
+
 body{
-    background-color:#efefef;
+    background-color:#fff;
+    font-family: "Open Sans", sans-serif;
+    margin: 0px;
+}
+
+.body{
+    margin-top: 80px;
 }
 
 #banner span#site-name{
@@ -18,6 +26,25 @@ body{
 #banner a, #banner-wide a{
     text-decoration: none;
     color:#fff;
+}
+
+.header{
+    width: 100%;
+    position:fixed;
+    left:0px;
+    top:0px;
+    background-color:#4a90ff;
+    color:#fff;
+    height:60px;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
+    z-index: 100;
+}
+
+.header h1 {
+    margin: 0px;
+    line-height: 60px;
+    color: #fff;
+    font-weight: bold;
 }
 
 a{
@@ -41,8 +68,6 @@ a{
     padding:10px;
 }
 
-
-
 #timestamp, #timestamp-wide
 {
     padding-bottom:50px;
@@ -56,82 +81,80 @@ a{
     clear:both;
 }
 
-/*#body-wrapper > h1{*/
-    /*font-weight: 100;*/
-    /*font-size: 2.5em;*/
-    /*border-bottom: 2px solid #e0e0e0;*/
-/*}*/
-
-/*h2{*/
-    /*font-weight: 100;*/
-    /*font-size: 2.0em;*/
-    /*border-bottom: 1px solid #f0f0f0;*/
-/*}*/
-
-/*h3{*/
-    /*font-weight: 100;*/
-    /*font-size: 1.5em;*/
-/*}*/
-
-code{
-    padding:1px;
-    padding-left:5px;
-    padding-right:5px;
-    background-color:#fcfcfc;
-    color:#404040;
+h1, h2, h3, h4 {
+    font-family: Montserrat, sans-serif;
+    font-weight: normal;
+    margin-bottom: 5px;
+    color: #0187cd;
 }
 
+p {
+    margin-top: 5px;
+}
+
+
+
 pre {
-    background-color: #fcfcfc;
-    display:block;
     overflow: auto;
-    font-weight: normal;
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+pre > code {
+    color: #202020;
+    font-size: smaller;
+    font-family: "Fira Code", monospace;
 }
 
 blockquote{
     background-color:#fbfefa;
     padding:10px;
-    border-left:5px solid;
-    border-left-color: #c9efc8;
+    border-left: 5px solid #c9efc8;
     font-size:smaller;
 }
 
-img{
-    margin:5px;
+.img-wrapper {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .img-frame{
-    margin-bottom:15px;
-    margin-top:15px;
+    display: inline-block;
 }
 
-.img-frame > div {
-    padding:5px;
+.img-frame > img {
+    box-shadow: 2px 2px 12px rgba(128,128,128,0.3);
+    border-radius: 3px;
+    max-width: 850px;
+}
+
+.img-frame > .img-caption {
     font-weight:bold;
     font-size:smaller;
+    display: block;
 }
 
 .block{
-    padding:15px;
-    padding-left:94px;
+    padding: 15px 15px 15px 94px;
     min-height: 84px;
-    background-position:15px 20px;
-    background-repeat: no-repeat;
     margin-top:10px;
     margin-bottom:10px;
-    background-color: #f0f0f0;
+    background: #f0f0f0 no-repeat 15px 20px;
     border-left: 5px solid #c0c0c0;
 }
 
 .info{
-    background-color:#fffabc;
-    background-image:url(../images/info.png);
+    background: #fffabc url(../images/info.png);
 }
 
 .warning{
-    background-color:#ffeef0;
     border-left:5px solid #ff465b;
-    background-image:url(../images/warning.png);
+    background: #ffeef0 url(../images/warning.png);
 }
 
 table{
@@ -151,15 +174,14 @@ table > thead > tr > th{
 }
 
 table > tbody > tr > td{
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 5px 10px;
     border-bottom: 1px solid #f0f0f0;
 }
 
 .toc {
     list-style: none;
-    margin-left: 5px;
+    margin-left: 15px;
+    padding-left: 0px;
 }
 
 .toc > li > a{
@@ -169,6 +191,11 @@ table > tbody > tr > td{
 .toc-1{
     margin:0px;
     padding:0px;
+    font-weight: bold;
+}
+
+.toc-1 ul {
+    font-weight: normal;
 }
 
 .toc-wrapper{
@@ -211,15 +238,11 @@ dt{
 }
 
 #body-wiki{
-    width:70%;
+    width:850px;
     padding:0px;
     background-color:#fff;
     margin-left:auto;
     margin-right:auto;
-}
-
-#body-wrapper{
-    padding:15px;
 }
 
 .title-anchor{
@@ -239,14 +262,13 @@ dt{
 }
 
 #footer{
-    padding:50px;
-    padding-left:10px;
+    padding: 50px 50px 50px 10px;
     font-size: small;
     color:#a0a0a0;
 }
 
 .header-wiki #header-content-wrapper{
-    width:70%;
+    width:850px;
     margin-left: auto;
     margin-right: auto;
     padding-left:10px;
